Cambia de lugar la intro a la heráldica #32

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -5,6 +5,27 @@ del problema que busca abordar. Se incluyen además las historias de usuario que
 justifican el desarrollo de la solución propuesta, los objetivos iniciales y la
 estructura del documento.
 
+\section{La heráldica} \label{sec:heraldica}
+
+Antes de hablar de la motivación de este proyecto, conviene definir qué se entiende 
+por heráldica. Se trata de la disciplina que estudia los escudos de armas y sus componentes 
+simbólicos, estructurales y normativos. A lo largo del tiempo, ha desarrollado un lenguaje 
+técnico propio, el blasonado, que permite describir escudos con precisión mediante palabras.  
+
+La digitalización de este conocimiento plantea retos importantes, tanto por la 
+complejidad de su terminología como por la diversidad de tradiciones existentes. Estas varían 
+según la región geográfica (heráldica española, anglosajona, etc.) o el ámbito de aplicación 
+(civil, nobiliario, eclesiástico, etc.), lo que dificulta la creación de modelos informáticos 
+universales.
+
+Aunque muchas tradiciones comparten elementos comunes, cada una posee convenciones propias en 
+cuanto a formas, vocabulario y reglas compositivas. Por ejemplo, no es lo mismo un escudo inglés
+que uno español, ni uno civil que uno eclesiástico. 
+
+Adelanto que este proyecto se centrará específicamente en la heráldica española y eclesiástica, 
+atendiendo a las necesidades de los clientes las cuales se expondrán de manera más específica en 
+el \hyperref[sec:historias_usuario]{capítulo de planificación}.
+
 \section{Motivación}
 Actualmente, el análisis y la consulta de escudos heráldicos presentan barreras
 prácticas tanto para quienes se encuentran ocasionalmente con ellos como para 
