--- a/doc/secciones/03_planificacion.tex
+++ b/doc/secciones/03_planificacion.tex
@@ -24,7 +24,7 @@ Al final de cada hito, se realizará una comprobación del progreso y se evaluar
 objetivos establecidos, y en caso contrario, se ajustarán los requisitos y se planificarán 
 los siguientes hitos.
 
-\subsection{Historias de usuario}
+\subsection{Historias de usuario} \label{sec:historias_usuario}
 Como punto de partida para la planificación del proyecto, se han definido una seria de 
 historias de usuario que reflejan las necesidades de los usuarios que el proyecto final
 debe satisfacer. Estas historias de usuario servirán como base para la definición de los hitos.
