Introduce el capitulo de análisis #35

--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -1,2 +1,16 @@
 \chapter{Análisis del problema}
- 
+Este capítulo tiene como objetivo analizar en profundidad el problema al que se pretende 
+dar solución, abordando tanto los aspectos conceptuales del dominio como las implicaciones 
+técnicas y funcionales del sistema desde una perspectiva inicial.
+
+Partiendo de las necesidades recogidas en las \hyperref[sec:historias_usuario]{historias de usuario}, 
+este capítulo analiza las características del dominio heráldico desde una perspectiva 
+técnica y funcional. Para ello, se modelan los elementos relevantes mediante un enfoque 
+basado en Domain-Driven Design (DDD), lo que permite establecer una representación 
+estructurada de los conceptos clave.
+
+Además, se analizarán los riesgos técnicos asociados y se esbozarán posibles vías de 
+evolución futura. Finalmente, se elegirán el lenguaje de programación y las herramientas
+que servirán de base para las decisiones de implementación que se describirán en el capítulo 
+siguiente.
+
