Elimina casos de uso
No aportan gran cosa actualmente y es algo que puedo tratar más adelante cuando aporte valor real al desarrollo #48

--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -4,22 +4,9 @@ dar solución, abordando tanto los aspectos conceptuales del dominio como las im
 técnicas y funcionales del sistema desde una perspectiva inicial. No se busca definir una
 solución, sino comprender el contexto del problema y acotarlo de manera realista.
 
-Además, se analizarán los riesgos técnicos asociados y se esbozarán posibles vías de 
-evolución futura. Finalmente, se elegirán el lenguaje de programación y las herramientas
-que servirán de base para las decisiones de implementación que se describirán en el capítulo 
-siguiente.
-
-\section{Casos de uso}
-A partir de las \hyperref[sec:historias_usuario]{historias de usuario} recopiladas, se han 
-identificado varios casos de uso que reflejan las interacciones esperadas entre los usuarios
-y el sistema:
-\begin{itemize}
-    \item \textbf{CU1: } Búsqueda de un escudo según sus elementos. Visto en la HU1.
-    \item \textbf{CU2: } Proporcionar información sobre un escudo: a quién pertenece. Visto en la HU1.
-    \item \textbf{CU3: } Filtrar escudos en función de sus elementos. Visto en la HU2.
-\end{itemize}
-
-Estos casos de uso delimitan las funcionalidades mínimas del sistema y orientan el futuro desarrollo.
+Se analizarán los riesgos técnicos asociados y se esbozarán posibles vías de evolución futura. 
+Finalmente, se elegirán el lenguaje de programación y las herramientas que servirán de base 
+para las decisiones de implementación que se describirán en el capítulo siguiente.
 
 \section{Análisis de riesgos}
 Antes de comenzar el desarrollo se identifican los siguientes riesgos:
