Extrae restricciones de las HUs #30

--- a/doc/secciones/03_planificacion.tex
+++ b/doc/secciones/03_planificacion.tex
@@ -30,13 +30,13 @@ historias de usuario que reflejan las necesidades de los usuarios que el proyect
 debe satisfacer. Estas historias de usuario servirán como base para la definición de los hitos.
 Las historias de usuario definidas son las siguientes:
 \begin{itemize}
-    \item \textbf{HU1: Estudiante de Historia del Arte - }Un estudiante de Historia del 
+    \item \textbf{HU1: Estudiante de Historia del Arte - }\label{sec:hu1}Un estudiante de Historia del 
     Arte está paseando por Roma y se encuentra con una obra arquitectónica en cuya fachada
     hay un escudo heráldico papal. Se pregunta de quién será y qué representa. Sigue caminando 
     y se encuentra con más escudos, lo que le hace pensar en lo oportuna que sería una 
     plataforma que le ayude a identificarlos y obtener información sobre ellos de manera 
     sencilla.
-    \item \textbf{HU2: Investigador en heráldica - }Un investigador de heráldica española
+    \item \textbf{HU2: Investigador en heráldica - }\label{sec:hu2}Un investigador de heráldica española
     encuentra tedioso y complicado analizar y comprobar escudos en fuentes analógicas, ya 
     que hacerlo manualmente de esta manera lo convierte en un proceso lento y propenso a 
     errores.
