--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -226,19 +226,19 @@ Entre las opciones que cumplen los requisitos anteriores, se prioriza:
 Se han comparado tres opciones:
 \begin{itemize}
     \item \textbf{pip + venv}: Herramientas oficiales incluidas con Python que permiten instalar
-     paquetes y crear entornos virtuales de forma sencilla.
+     paquetes y crear entornos virtuales de manera sencilla.
     \item \textbf{pipenv}: Integra la gestión de dependencias y del entorno virtual en un solo
-    comando, usando un archivo \texttt{Pipfile}.
+    comando, empleando un archivo \texttt{Pipfile}.
     \item \textbf{poetry}: Más avanzado, orientado a proyectos que quieren distribuirse como 
-    paquetes, usa \texttt{pyproject.toml} para la gestión.
+    paquetes, opera con \texttt{pyproject.toml} para la gestión.
 \end{itemize}
 
 \subsubsection{Herramienta seleccionada}
 Se ha seleccionado \textbf{pip} junto con \textbf{venv} por ser la opción más simple, oficial y 
 suficiente para las necesidades actuales del proyecto. 
-Aunque \textbf{pipenv} ofrece la ventaja de integrar en un solo comando la gestión del entorno 
+Aunque \textbf{pipenv} ofrece la ventaja de integrar en un único comando la gestión del entorno 
 virtual y de dependencias, añade una capa de complejidad innecesaria para un proyecto que, por 
-ahora, solo requiere definir unas pocas dependencias básicas. 
+ahora, únicamente requiere definir unas pocas dependencias básicas. 
 Al ser herramientas incluidas directamente en Python, \textbf{pip} y \textbf{venv} también 
 garantizan mayor compatibilidad y menor curva de aprendizaje, lo que facilita entender y usar 
 el proyecto sin configuraciones adicionales.
