Especifica versión de python #51

--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -209,8 +209,7 @@ evitando la instalación manual y reduciendo el riesgo de errores o incompatibil
 \subsubsection{Criterios de búsqueda}
 Se necesita un gestor de paquetes que:
 \begin{itemize}
-    \item Sea compatible con la versión de Python utilizada en el proyecto.
-    \item Permita aislar el entorno de desarrollo para evitar conflictos con otras instalaciones.
+    \item Sea compatible con Python 3.12.
     \item Sea fácil de usar y mantener en proyectos pequeños o medianos.
     \item Esté bien documentado y cuente con soporte de la comunidad.
 \end{itemize}
