Especifica versión de Python #51

--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -209,7 +209,7 @@ evitando la instalación manual y reduciendo el riesgo de errores o incompatibil
 \subsubsection{Criterios de búsqueda}
 Se necesita un gestor de paquetes que:
 \begin{itemize}
-    \item Sea compatible con Python 3.12.
+    \item Sea compatible con Python 3.12, actualmente en soporte LTS.
     \item Sea fácil de usar y mantener en proyectos pequeños o medianos.
     \item Esté bien documentado y cuente con soporte de la comunidad.
 \end{itemize}
